# project

./: .gitignore  .pre-commit-config.yaml  deploy.sh  start-dev.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  apply_migration.py  get_latest_error.py  list_models.py  pyproject.toml  requirements.txt  test_vision.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: analysis.py  chat.py  health.py  router.py  uploads.py  users.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  analysis.py  chat.py  upload.py  user.py
backend/app/pipelines/: base_pipeline.py  bill_pipeline.py  disaster_pipeline.py  government_pipeline.py  legal_pipeline.py  medical_pipeline.py  receipt_pipeline.py  scam_pipeline.py  screenshot_pipeline.py
backend/app/prompts/: system_prompts.py
backend/app/schemas/: analysis.py  chat.py  upload.py  user.py
backend/app/services/: analysis_service.py  classification_service.py  llm_service.py  ocr_service.py  pdf_service.py  rate_limiter.py  video_service.py  vision_service.py
backend/app/tasks/: reset_monthly_uploads.py
backend/app/utils/: cache.py  exceptions.py  file_utils.py  text_utils.py
backend/tests/: test_analysis_service.py  test_cache.py  test_file_utils.py  test_llm_service.py  test_rate_limit.py  test_text_utils.py
docs/: clarify_ai_project_report.md  developer_guide.md  live_deployment.md  testing_guide.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: ErrorBoundary.tsx
frontend/components/analysis/: AnalysisHeader.tsx  AnalysisSection.tsx  DisasterAnalysis.tsx  RiskScore.tsx  SummaryCard.tsx
frontend/components/auth/: PasswordStrength.tsx
frontend/components/chat/: ChatBottomSheet.tsx  ChatMessage.tsx  ChatPanel.tsx  SuggestedQuestions.tsx
frontend/components/history/: HistoryCard.tsx  HistoryFilters.tsx
frontend/components/layout/: CommandPalette.tsx  MobileNav.tsx  Sidebar.tsx
frontend/components/upload/: UploadProgress.tsx  (+1 more)
frontend/hooks/: useChat.ts  useUpload.ts
frontend/lib/: api.ts  supabase.ts
frontend/public/: manifest.json
supabase/migrations/: 002_users.sql  003_uploads.sql  004_analysis.sql  005_chat.sql  006_extras.sql  007_disaster.sql  008_monthly_reset_cron.sql  009_vision_detections.sql
(+12 files in other folders)
